@@ -76,6 +76,12 @@ Connect to mpd on the specified port.
 .TP
 .B password = PASSWORD
 Connect to mpd using the specified password.
+.TP
+.B timeout = TIMEOUT
+Attempt to reconnect to mpd if a response to a command is not received within
+TIMEOUT seconds. Specifying a value in the configuration file overrides the
+"MPD_TIMEOUT" environment variable. If no timeout is specified in the
+configuration file or in the environment, the default is 1.5 seconds.
 .SS Interface
 .TP
 .B enable\-mouse = yes|no
