@@ -36,6 +36,8 @@
 
 #define DEFAULT_TEXT_EDITOR "editor"
 
+#define DEFAULT_MPD_TIMEOUT 5000 /* 5 seconds */
+
 #define DEFAULT_SCROLL TRUE
 #define DEFAULT_SCROLL_SEP " *** "
 
